--- a/front/css/sites.css
+++ b/front/css/sites.css
@@ -16,9 +16,9 @@ body {
 
 nav {
   position: sticky;
-  margin-top: 20px;
-  height: 150px;
-  width: 1880px;
+  margin-top: 1vw;
+  height: 7.813vw;
+  width: 97.917vw;
   background-color: #36506c;
   display: flex;
   align-items: center;
@@ -28,14 +28,14 @@ nav {
 }
 
 nav .logo {
-  height: 120px;
-  width: 120px;
+  height: 6.25vw;
+  width: 6.25vw;
   border-radius: 50%;
 }
 
 nav .btnNav {
-  height: 50px;
-  width: 150px;
+  height: 2.604vw;
+  width: 7.813vw;
   background-color: #eff9fd;
   border-radius: 5px;
   display: flex;
@@ -50,19 +50,19 @@ nav .btnNav {
 /* ------ Main ------ */
 
 .store {
-  margin-top: 20px;
+  margin-top: 1vw;
   height: 100%;
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 160px;
+  gap: 8.333vw;
 }
 
 .cardImgStore {
-  height: 400px;
-  width: 970px;
+  height: 20.833vw;
+  width: 50.521vw;
   background-color: #36506c;
   border-radius: 5px;
   display: flex;
@@ -76,15 +76,15 @@ nav .btnNav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 380px;
-  width: 480px;
+  height: 19.792vw;
+  width: 25vw;
   border-radius: 5px;
 }
 
 .cardImgStore .imgExt {
   height: 95%;
   width: 100%;
-  margin: 10px;
+  margin: 0.521vw;
   border-radius: 5px;
 }
 
@@ -93,54 +93,54 @@ nav .btnNav {
 }
 
 .cardOfstore {
-  height: 380px;
-  width: 430px;
+  height: 19.792vw;
+  width: 22.396vw;
   background-color: #eff9fd;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 10px;
-  border: #36506c 10px solid;
+  gap: 0.521vw;
+  border: #36506c 0.521vw solid;
   box-shadow: 0px 0px 2px #000000;
 }
 
 .employee {
-  margin-top: 50px;
+  margin-top: 2.604vw;
   display: grid;
-  gap: 50px;
+  gap: 2.604vw;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
 .employee .cardOfEmployee {
-  height: 580px;
-  width: 480px;
+  height: 30.208vw;
+  width: 25vw;
   background-color: #eff9fd;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  gap: 10px;
-  border: #36506c 10px solid;
+  gap: 0.521vw;
+  border: #36506c 0.521vw solid;
   box-shadow: 0px 0px 2px #000000;
 }
 
 .employee .cardOfEmployee .imgOfEmployee {
-  height: 150px;
-  width: 150px;
+  height: 7.813vw;
+  width: 7.813vw;
   border-radius: 50%;
-  margin: 30px;
+  margin: 1.563vw;
 }
 
 /* ------ Footer ------ */
 
 footer {
-  margin-top: 50px;
-  margin-bottom: 20px;
-  height: 100px;
-  width: 1880px;
+  margin-top: 2.604vw;
+  margin-bottom: 1.042vw;
+  height: 5.208vw;
+  width: 97.917vw;
   background-color: #36506c;
   color: #eff9fd;
   display: flex;
