--- a/front/css/sites.css
+++ b/front/css/sites.css
@@ -47,16 +47,18 @@ nav .btnNav {
   box-shadow: 0px 0px 2px #36506c;
 }
 
-nav .btnNav:hover {
+nav .btnNav:hover,
+nav .btnNav .btnSelect:hover {
   background-color: #36506c;
   color: #eff9fd;
+  border: #eff9fd 0.104vw solid;
 }
 
 nav .btnNav .btnSelect {
   height: 2.604vw;
-  width: 5.813vw;
+  width: 7.813vw;
   background-color: #eff9fd;
-  border-radius: 5px 0 0 5px;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -64,20 +66,7 @@ nav .btnNav .btnSelect {
   font-weight: bold;
   font-size: 20px;
   box-shadow: 0px 0px 2px #36506c;
-}
-
-nav .btnNav .btnConfirm {
-  height: 2.604vw;
-  width: 2vw;
-  background-color: #eff9fd;
-  border-radius: 0 5px 5px 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #36506c;
-  font-weight: bold;
-  font-size: 20px;
-  box-shadow: 0px 0px 2px #36506c;
+  border: #36506c 0.104vw solid;
 }
 
 /* ------ Main ------ */
@@ -117,6 +106,7 @@ nav .btnNav .btnConfirm {
   height: 19.792vw;
   width: 22.396vw;
   background-color: #eff9fd;
+  color: #36506c;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -138,6 +128,7 @@ nav .btnNav .btnConfirm {
   height: 30.208vw;
   width: 25vw;
   background-color: #eff9fd;
+  color: #36506c;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
