--- a/front/css/supplier.css
+++ b/front/css/supplier.css
@@ -1,134 +1,127 @@
 * {
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style: none;
-    font-family: "Poppins", sans-serif;
-  }
-  body {
-    background-color: #eff9fd;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  /* ------ Navbar ------ */
-  
-  nav {
-    position: sticky;
-    margin-top: 1vw;
-    height: 7.813vw;
-    width: 97.917vw;
-    background-color: #36506c;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    border-radius: 5px;
-    box-shadow: 0px 0px 2px #000000;
-  }
-  
-  nav .logo {
-    height: 6.25vw;
-    width: 6.25vw;
-    border-radius: 50%;
-  }
-  
-  nav .btnNav {
-    height: 2.604vw;
-    width: 7.813vw;
-    background-color: #eff9fd;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #36506c;
-    font-weight: bold;
-    font-size: 20px;
-    box-shadow: 0px 0px 2px #36506c;
-  }
-  
-  nav .btnNav:hover {
-    background-color: #36506c;
-    color: #eff9fd;
-  }
-  
-  nav .btnNav .btnSelect {
-    height: 2.604vw;
-    width: 5.813vw;
-    background-color: #eff9fd;
-    border-radius: 5px 0 0 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #36506c;
-    font-weight: bold;
-    font-size: 20px;
-    box-shadow: 0px 0px 2px #36506c;
-  }
-  
-  nav .btnNav .btnConfirm {
-    height: 2.604vw;
-    width: 2vw;
-    background-color: #eff9fd;
-    border-radius: 0 5px 5px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #36506c;
-    font-weight: bold;
-    font-size: 20px;
-    box-shadow: 0px 0px 2px #36506c;
-  }
-  
-  /* ------ Main ------ */
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  background-color: #eff9fd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+/* ------ Navbar ------ */
 
-  
-  .supplier {
-    margin-top: 2.604vw;
-    display: grid;
-    gap: 2.604vw;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-  
-  .supplier .cardOfSupplier {
-    height: 30.208vw;
-    width: 25vw;
-    background-color: #eff9fd;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 0.521vw;
-    border: #36506c 0.521vw solid;
-    box-shadow: 0px 0px 2px #000000;
-  }
-  
-  .supplier .cardOfSupplier:hover {
-    background-color: #36506c;
-    color: #eff9fd;
-  }
-  
-  .supplier .cardOfSupplier .imgOfSupplier {
-    height: 7.813vw;
-    width: 7.813vw;
-    border-radius: 50%;
-    margin: 1.563vw;
-  }
-  
-  /* ------ Footer ------ */
-  
-  footer {
-    margin-top: 2.604vw;
-    margin-bottom: 1.042vw;
-    height: 5.208vw;
-    width: 97.917vw;
-    background-color: #36506c;
-    color: #eff9fd;
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    border-radius: 5px;
-    box-shadow: 0px 0px 2px #000000;
-  }
-  
+nav {
+  position: sticky;
+  margin-top: 1vw;
+  height: 7.813vw;
+  width: 97.917vw;
+  background-color: #36506c;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 5px;
+  box-shadow: 0px 0px 2px #000000;
+}
+
+nav .logo {
+  height: 6.25vw;
+  width: 6.25vw;
+  border-radius: 50%;
+}
+
+nav .btnNav {
+  height: 2.604vw;
+  width: 7.813vw;
+  background-color: #eff9fd;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #36506c;
+  font-weight: bold;
+  font-size: 20px;
+  border: #eff9fd 0.104vw solid;
+  box-shadow: 0px 0px 2px #36506c;
+}
+
+nav .btnNav:hover {
+  background-color: #36506c;
+  color: #eff9fd;
+  border: #eff9fd 0.104vw solid;
+}
+
+/* ------ Main ------ */
+
+.supplier {
+  margin-top: 2.604vw;
+  display: grid;
+  gap: 2.604vw;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.supplier .cardOfSupplier {
+  height: 30.208vw;
+  width: 25vw;
+  background-color: #eff9fd;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 0.521vw;
+  border: #36506c 0.521vw solid;
+  box-shadow: 0px 0px 2px #000000;
+}
+
+.supplier .cardOfSupplier:hover {
+  background-color: #36506c;
+  color: #eff9fd;
+}
+
+.supplier .cardOfSupplier .imgOfSupplier {
+  height: 7.813vw;
+  width: 7.813vw;
+  border-radius: 50%;
+  margin: 1.563vw;
+}
+
+.supplier .cardOfSupplier .btnSupp {
+  height: 2vw;
+  width: 7vw;
+  background-color: #eff9fd;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #36506c;
+  font-weight: bold;
+  font-size: 15px;
+  border: #36506c 0.104vw solid;
+}
+
+.supplier .cardOfSupplier .btnSupp:hover {
+  cursor: pointer;
+  background-color: #36506c;
+  color: #eff9fd;
+  border: #eff9fd 0.104vw solid;
+}
+
+/* ------ Footer ------ */
+
+footer {
+  margin-top: 2.604vw;
+  margin-bottom: 1.042vw;
+  height: 5.208vw;
+  width: 97.917vw;
+  background-color: #36506c;
+  color: #eff9fd;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 5px;
+  box-shadow: 0px 0px 2px #000000;
+}
