:hammer: | modification in recuperations.go, typeWorkplace in upper case to improve | :lipstick: | color adjustment

--- a/front/css/sites.css
+++ b/front/css/sites.css
@@ -151,6 +151,11 @@ nav .btnNav .btnSelect {
   margin: 1.563vw;
 }
 
+main .type {
+  margin: 1vw;
+  color: #dd5751;
+}
+
 /* ------ Footer ------ */
 
 footer {
