--- a/front/css/supplier.css
+++ b/front/css/supplier.css
@@ -67,6 +67,7 @@ nav .btnNav:hover {
   height: 30.208vw;
   width: 25vw;
   background-color: #eff9fd;
+  color: #36506c;
   border-radius: 5px;
   display: flex;
   flex-direction: column;
@@ -87,6 +88,19 @@ nav .btnNav:hover {
   width: 7.813vw;
   border-radius: 50%;
   margin: 1.563vw;
+}
+
+.supplier .cardOfSupplier .infos {
+  margin: 1vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.521vw;
+}
+
+.supplier .cardOfSupplier .infos .product {
+  color: #dd5751;
 }
 
 .supplier .cardOfSupplier .btnSupp {
