--- a/front/css/supplier.css
+++ b/front/css/supplier.css
@@ -63,7 +63,8 @@ nav .btnNav:hover {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
-.supplier .cardOfSupplier {
+.supplier .cardOfSupplier,
+.btnCreate {
   height: 30.208vw;
   width: 25vw;
   background-color: #eff9fd;
@@ -78,12 +79,23 @@ nav .btnNav:hover {
   box-shadow: 0px 0px 2px #000000;
 }
 
-.supplier .cardOfSupplier:hover {
+.supplier .cardOfSupplier:hover,
+.btnCreate:hover {
   background-color: #36506c;
   color: #eff9fd;
 }
 
-.supplier .cardOfSupplier .imgOfSupplier {
+.btnCreate {
+  font-size: large;
+  cursor: pointer;
+}
+
+.btnCreate h2 {
+  margin: 1vw;
+}
+
+.supplier .cardOfSupplier .imgOfSupplier,
+.btnCreate img {
   height: 7.813vw;
   width: 7.813vw;
   border-radius: 50%;
@@ -103,8 +115,8 @@ nav .btnNav:hover {
   color: #dd5751;
 }
 
-.supplier .cardOfSupplier .btnSupp {
-  height: 2vw;
+.supplier .cardOfSupplier .btnDel {
+  height: 1.5vw;
   width: 7vw;
   background-color: #eff9fd;
   border-radius: 5px;
@@ -113,11 +125,11 @@ nav .btnNav:hover {
   justify-content: center;
   color: #36506c;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 10px;
   border: #36506c 0.104vw solid;
 }
 
-.supplier .cardOfSupplier .btnSupp:hover {
+.supplier .cardOfSupplier .btnDel:hover {
   cursor: pointer;
   background-color: #36506c;
   color: #eff9fd;
@@ -138,4 +150,58 @@ footer {
   justify-content: space-evenly;
   border-radius: 5px;
   box-shadow: 0px 0px 2px #000000;
+}
+
+/* Pop-up */
+
+.popUpCreate,
+.addSupp {
+  position: fixed;
+  top: 5vh;
+  left: 5vw;
+  width: 90vw;
+  height: 90vh;
+  background-color: #eff9fd;
+  border: #36506c 0.5vw solid;
+  border-radius: 5px;
+  gap: 1.563vh;
+  color: #36506c;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.addSupp {
+  display: flex;
+  gap: 0.5vh;
+}
+
+.popUpCreate .delivery {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 0.5vh;
+}
+
+.popUpCreate img {
+  width: 10vw;
+}
+
+.popUpCreate .btn,
+.popUpCreate .btnClose {
+  height: 1.5vw;
+  width: 7vw;
+  background-color: #eff9fd;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #36506c;
+  font-weight: bold;
+  font-size: 10px;
+  border: #36506c 0.104vw solid;
+  box-shadow: 0px 0px 2px #36506c;
+  cursor: pointer;
 }
