--- a/front/css/supplier.css
+++ b/front/css/supplier.css
@@ -43,7 +43,7 @@ nav .btnNav {
   justify-content: center;
   color: #36506c;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.051vw;
   border: #eff9fd 0.104vw solid;
   box-shadow: 0px 0px 2px #36506c;
 }
@@ -125,7 +125,7 @@ nav .btnNav:hover {
   justify-content: center;
   color: #36506c;
   font-weight: bold;
-  font-size: 10px;
+  font-size: 0.525vw;
   border: #36506c 0.104vw solid;
 }
 
@@ -200,8 +200,87 @@ footer {
   justify-content: center;
   color: #36506c;
   font-weight: bold;
-  font-size: 10px;
+  font-size: 0.525vw; /* 10px */
   border: #36506c 0.104vw solid;
   box-shadow: 0px 0px 2px #36506c;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  nav,
+  footer {
+    height: 15vw;
+    width: 97.917vw;
+  }
+
+  nav .btnNav {
+    height: 8vw;
+    width: 24vw;
+    font-size: 15px;
+  }
+
+  .supplier {
+    margin-top: 2.604vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2.604vw;
+  }
+
+  .supplier .cardOfSupplier {
+    padding-left: 3vw;
+    gap: 1vw;
+    height: 45vw;
+    width: 97.917vw;
+    flex-direction: row;
+    font-size: small;
+  }
+
+  .supplier .cardOfSupplier .imgOfSupplier,
+  .btnCreate h2 {
+    display: none;
+  }
+
+  .btnCreate {
+    height: 19vw;
+    width: 24vw;
+  }
+
+  .btnCreate img {
+    height: 15vw;
+    width: 15vw;
+  }
+
+  .supplier .cardOfSupplier .infos {
+    margin: 1vw;
+    font-size: small;
+    gap: 0.521vw;
+  }
+
+  .supplier .cardOfSupplier .btnDel {
+    height: 3vw;
+    width: 10vw;
+    position: relative;
+    top: 10vh;
+    right: 80vw;
+    font-size: 1vw;
+  }
+
+  .popUpCreate,
+  .addSupp {
+    z-index: 1;
+  }
+
+  .popUpCreate .btn,
+  .popUpCreate .btnClose {
+    height: 5vw;
+    width: 24vw;
+    font-size: small;
+    margin-top: 2vw;
+  }
+
+  .popUpCreate img {
+    display: none;
+  }
 }
