--- a/front/css/sites.css
+++ b/front/css/sites.css
@@ -33,7 +33,7 @@ nav .nav {
   width: 70vw;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 nav .btnDec {
@@ -259,4 +259,96 @@ footer {
   border: #36506c 0.104vw solid;
   box-shadow: 0px 0px 2px #36506c;
   cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  nav,
+  footer {
+    height: 30vw;
+    flex-direction: column;
+    gap: 5vw;
+    justify-content: center;
+    width: 97.917vw;
+  }
+
+  nav .btnNav,
+  nav .btnNav .btnSelect {
+    height: 8vw;
+    width: 24vw;
+    font-size: 15px;
+  }
+
+  nav .exit {
+    height: 5vw;
+    width: 5vw;
+  }
+
+  .employee {
+    margin-top: 2.604vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2.604vw;
+  }
+
+  .employee .cardOfEmployee,
+  .cardOfstore {
+    padding-top: 5vw;
+    gap: 1vw;
+    height: 55vw;
+    width: 97.917vw;
+    font-size: small;
+  }
+
+  .cardImgStore {
+    display: none;
+  }
+
+  .employee .cardOfEmployee .imgOfEmployee,
+  .btnCreate h2 {
+    display: none;
+  }
+
+  .btnCreate {
+    height: 19vw;
+    width: 24vw;
+  }
+
+  .btnCreate img {
+    height: 15vw;
+    width: 15vw;
+  }
+
+  .employee .cardOfEmployee .infos {
+    margin: 1vw;
+    font-size: small;
+    gap: 0.521vw;
+  }
+
+  .employee .cardOfEmployee .btnDel {
+    height: 3vw;
+    width: 10vw;
+    position: relative;
+    top: 10vh;
+    right: 80vw;
+    font-size: 1vw;
+  }
+
+  .popUpCreate,
+  .addSupp {
+    z-index: 1;
+  }
+
+  .popUpCreate .btn,
+  .popUpCreate .btnClose {
+    height: 5vw;
+    width: 24vw;
+    font-size: small;
+    margin-top: 2vw;
+  }
+
+  .popUpCreate img {
+    display: none;
+  }
 }
