--- a/front/css/sites.css
+++ b/front/css/sites.css
@@ -284,9 +284,10 @@ footer {
 }
 
 .popUpCreate .btn,
-.popUpCreate .btnClose {
+.popUpCreate .btnClose,
+.popUpCreate .inputPop {
   height: 1.5vw;
-  width: 7vw;
+  width: 10vw;
   background-color: #eff9fd;
   border-radius: 5px;
   display: flex;
@@ -300,7 +301,7 @@ footer {
   cursor: pointer;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1650px) {
   nav,
   footer {
     height: 30vw;
@@ -380,9 +381,10 @@ footer {
   }
 
   .popUpCreate .btn,
-  .popUpCreate .btnClose {
+  .popUpCreate .btnClose,
+  .popUpCreate .inputPop {
     height: 5vw;
-    width: 24vw;
+    width: 30vw;
     font-size: small;
     margin-top: 2vw;
   }
